# Flaskter

./: .env.docker.template  .env.template  .gitignore  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  run.py
app/: Dockerfile  config.py  models.py  routes.py  spec.py
migrations/: env.py
migrations/versions/: 57e6bd9208bc_2.py  75556a5baeb5_3.py
static/js/: app.7c9275be.js
templates/: index.html
tests/: conftest.py  test_routes.py
